# Computational-Geometry-Coding-Problems

./: README.md  readme.md  script.py
week1/: problem.txt  solution.cpp  test
week1/generator/: gen_random_pts.py
week10/: gen-rand.py  main.cpp  meson.build  problem.txt
week10/tests/: bounded.in  infeasible.in  line_segment.in  point.in  strip.in  unbounded.in
week11/: gen-rand.py  main.cpp  meson.build
week2/: input2.txt  problem.txt  test
week2/generator/: gen_input_clockwise.py  gen_input_count_clockwise.py
week3/: input2_square.txt  problem.txt
week4/: chull.cpp  meson.build  problem.txt  solution.cpp  test
week4/.marscode/: deviceInfo.json
week4/test-cases/: seq1.in  seq2.in
week5/: csearch.cpp  input.txt  meson.build  problem.txt  tags
week5/src/: common.cpp  common.h  io.cpp  main.cpp  search.cpp
week5/test-cases/: inp1.txt  inp2.txt  inp3.txt
week6/: meson.build  problem.txt  segintersctions.cpp
week6/test/: gen-rand.py  t1.in  t2.in  t3.in  t4.in  t5.in
week7/: input.txt  meson.build  problem.txt
week7/src/: dcel.cpp  dcel.h  dcel_queries.cpp  dcel_queries.h  dcel_types.h  io.cpp  io.h  main.cpp  meson.build
week7/test/: gen-rand.py  point.in  region.in  segment.in
week8/: meson.build  problem.txt
week8/src/: io.cpp  io.h  main.cpp  meson.build  (+6 more)
week9/: gen-rand.py  input.txt  meson.build  problem.txt
week_1_collinear/: collinear.cpp  input.txt  test
week_2_polygon/: clk.txt  polygon.cpp  test
week_3_inside-outside/: inside-outside.cpp  test  test1_triangle.txt  test3_lshape.txt  test4_star.txt  test5_boundary.txt
(+10 files in other folders)
